# frequency-shifter

./: .gitignore  CONTRIBUTING.md  LICENSE  MATH_FOUNDATION.md  PROJECT_SPEC.md  README.md  RESEARCH_FINDINGS.md  Readme.md  STEREO_USAGE.md  cloud.md  notes.ipynb  pyproject.toml  test_audio.py  test_audio_stereo.py  test_loudness.py  test_stereo.py
.github/workflows/: build.yml  pages.yml  release.yml
docs/: ALGORITHM.md  IMPLEMENTATION_SUMMARY.md  PHASE_VOCODER.md
examples/: basic_usage.py
plugin/: .gitignore  CMakeLists.txt  FrequencyShifter.code-workspace  README.md
plugin/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/src/dsp/: DriftModulator.h  FrequencyShifter.cpp  FrequencyShifter.h  MusicalQuantizer.cpp  MusicalQuantizer.h  PhaseVocoder.cpp  PhaseVocoder.h  STFT.cpp  STFT.h  Scales.h  SpectralDelay.h  SpectralMask.h
src/harmonic_shifter/: __init__.py
src/harmonic_shifter/audio/: __init__.py  io.py
src/harmonic_shifter/core/: __init__.py  frequency_shifter.py  phase_vocoder.py  quantizer.py  stft.py
src/harmonic_shifter/processing/: __init__.py  processor.py
src/harmonic_shifter/theory/: __init__.py  scales.py  tuning.py
src/harmonic_shifter/utils/: __init__.py  validation.py
tests/: __init__.py  conftest.py
tests/unit/: test_stft.py  test_tuning.py
website/: CNAME  _config.yml  algorithm.md  index.md  math.md  phase-vocoder.md
